--- a/系统配置__员工角色分配.html
+++ b/系统配置__员工角色分配.html
@@ -1487,7 +1487,7 @@
         <div id="u276_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u277" class="text" style="visibility: visible;">
-          <p><span>员工角色过多时，显示第一个角色+“...” 未分配角色 显示未分配.</span></p>
+          <p><span>员工角色过多时，显示第一个角色+“...” 未分配角色 显示未分配..</span></p>
         </div>
       </div>
 
